possible mobile spacing fix

--- a/src/scss_styles/Header.scss
+++ b/src/scss_styles/Header.scss
@@ -18,6 +18,10 @@
 
     &-buttonSubSpacer {
         padding-bottom: 52px;
+
+        @media screen and (max-width: 991px) {
+            padding-bottom: 0px;
+        }
     }
 
     &-buttonSubtext {
